--- a/scripts/k8s/01-composition.yml
+++ b/scripts/k8s/01-composition.yml
@@ -1,39 +1,44 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: users-service
+  name: composition-service
 spec:
   ports:
     - port: 3000
+      name: http
       protocol: TCP
   selector:
-    app: users
+    app: composition
   type: LoadBalancer
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: users-deployment
+  name: composition-deployment
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: users
+        app: composition
         version: 0.0.1
     spec:
       containers:
-        - name: users
-          image: users:latest
+        - name: composition
+          image: composition:0.0.1
           imagePullPolicy: Never
           ports:
-            - containerPort: 80
+            - containerPort: 3000
               protocol: TCP
           env:
             - name: NODE_ENV
               value: development
             - name: PORT
               value: "3000"
+            - name: APP_URL_POSTS
+              value: http://posts-service:3000/posts
+            - name: APP_URL_USERS
+              value: http://users-service:3000/users
             - name: JWT_PUBLIC_KEY
               valueFrom:
                 secretKeyRef:
@@ -42,4 +47,4 @@ spec:
                   optional: false
   selector:
     matchLabels:
-      app: users
+      app: composition
