--- a/scripts/k8s/01-posts.yml
+++ b/scripts/k8s/01-posts.yml
@@ -1,33 +1,35 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: comments-service
+  name: posts-service
 spec:
   ports:
     - port: 3000
+      name: http
       protocol: TCP
   selector:
-    app: comments
+    app: posts
   type: LoadBalancer
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: comments-deployment
+  name: posts-deployment
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: comments
+        app: posts
         version: 0.0.1
     spec:
       containers:
-        - name: comments
-          image: comments:latest
+        - name: posts
+          image: posts:0.0.1
           imagePullPolicy: Never
           ports:
-            - containerPort: 80
+            # pura documentação (caráter informativo), igual o EXPOSE do Dockerfile
+            - containerPort: 3000
               protocol: TCP
           env:
             - name: NODE_ENV
@@ -40,6 +42,11 @@ spec:
                   name: jwt-keys
                   key: public
                   optional: false
+          resources:
+            limits:
+              memory: "128M"
+              cpu: "100m" # 10% de cada core de CPU - m -> millicore (1000m = 1.0 = 1 CPU)
   selector:
     matchLabels:
-      app: comments
+      app: posts
+      version: 0.0.1
