--- a/scripts/k8s/01-users.yml
+++ b/scripts/k8s/01-users.yml
@@ -1,32 +1,34 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth-service
+  name: users-service
 spec:
   ports:
     - port: 3000
+      name: http
       protocol: TCP
   selector:
-    app: auth
+    app: users
   type: LoadBalancer
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth-deployment
+  name: users-deployment
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: auth
+        app: users
         version: 0.0.1
     spec:
       containers:
-        - name: auth
-          image: auth:latest
+        - name: users
+          image: users:0.0.1
           imagePullPolicy: Never
           ports:
+            # pura documentação (caráter informativo), igual o EXPOSE do Dockerfile
             - containerPort: 3000
               protocol: TCP
           env:
@@ -34,12 +36,12 @@ spec:
               value: development
             - name: PORT
               value: "3000"
-            - name: JWT_PRIVATE_KEY
+            - name: JWT_PUBLIC_KEY
               valueFrom:
                 secretKeyRef:
                   name: jwt-keys
-                  key: private
+                  key: public
                   optional: false
   selector:
     matchLabels:
-      app: auth
+      app: users
