--- a/scripts/k8s/02-gateway.yml
+++ b/scripts/k8s/02-gateway.yml
@@ -1,4 +1,4 @@
-# @see https://istio.io/latest/docs/concepts/traffic-management/#virtual-services
+# @link https://istio.io/latest/docs/reference/config/networking/gateway/
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
@@ -14,6 +14,7 @@ spec:
       hosts:
         - "*"
 ---
+# @link https://istio.io/latest/docs/concepts/traffic-management/#virtual-services
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
@@ -26,10 +27,10 @@ spec:
   http:
     - match:
         - uri:
-            prefix: /comments
+            exact: /auth
       route:
         - destination:
-            host: comments-service
+            host: auth-service
             port:
               number: 3000
     - match:
@@ -48,3 +49,13 @@ spec:
             host: users-service
             port:
               number: 3000
+    - match:
+        - uri:
+            exact: /composition
+      route:
+        - destination:
+            host: composition-service
+            port:
+              number: 3000
+      rewrite:
+        uri: '/'
