--- a/scripts/k8s/07-hpa.yml
+++ b/scripts/k8s/07-hpa.yml
@@ -1,7 +1,7 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: posts-deployment
+  name: posts-hpa
 spec:
   maxReplicas: 10
   minReplicas: 1
