--- a/scripts/k8s/01-comments.yml
+++ b/scripts/k8s/01-comments.yml
@@ -1,47 +1,59 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: users-service
+  name: comments-service
 spec:
   ports:
-    - port: 3000
+    - port: 80
       name: http
       protocol: TCP
   selector:
-    app: users
+    app: comments
   type: LoadBalancer
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: users-deployment
+  name: comments-deployment
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: users
+        app: comments
         version: 0.0.1
     spec:
       containers:
-        - name: users
-          image: users:0.0.1
+        - name: comments
+          image: comments:0.0.1
           imagePullPolicy: Never
           ports:
             # pura documentação (caráter informativo), igual o EXPOSE do Dockerfile
-            - containerPort: 3000
+            - containerPort: 80
               protocol: TCP
           env:
             - name: NODE_ENV
               value: development
             - name: PORT
-              value: "3000"
+              value: "80"
             - name: JWT_PUBLIC_KEY
               valueFrom:
                 secretKeyRef:
                   name: jwt-keys
                   key: public
                   optional: false
+            - name: JWT_ISSUER
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-keys
+                  key: issuer
+                  optional: false
+            - name: JWT_AUDIENCE
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-keys
+                  key: audience
+                  optional: false
   selector:
     matchLabels:
-      app: users
+      app: comments
