--- a/scripts/k8s/01-posts.yml
+++ b/scripts/k8s/01-posts.yml
@@ -4,7 +4,7 @@ metadata:
   name: posts-service
 spec:
   ports:
-    - port: 3000
+    - port: 80
       name: http
       protocol: TCP
   selector:
@@ -29,18 +29,26 @@ spec:
           imagePullPolicy: Never
           ports:
             # pura documentação (caráter informativo), igual o EXPOSE do Dockerfile
-            - containerPort: 3000
+            - containerPort: 80
               protocol: TCP
           env:
-            - name: NODE_ENV
-              value: development
-            - name: PORT
-              value: "3000"
             - name: JWT_PUBLIC_KEY
               valueFrom:
                 secretKeyRef:
                   name: jwt-keys
                   key: public
+                  optional: false
+            - name: JWT_ISSUER
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-keys
+                  key: issuer
+                  optional: false
+            - name: JWT_AUDIENCE
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-keys
+                  key: audience
                   optional: false
           resources:
             limits:
