--- a/scripts/k8s/06-fault.yml
+++ b/scripts/k8s/06-fault.yml
@@ -26,7 +26,7 @@ spec:
               number: 3000
     - match:
         - uri:
-            prefix: /users
+            prefix: /comments
       fault:
         delay:
           fixedDelay: 5s
@@ -38,7 +38,7 @@ spec:
             value: 33
       route:
         - destination:
-            host: users-service
+            host: comments-service
             port:
               number: 3000
     - match:
