--- a/scripts/k8s/03-retry.yml
+++ b/scripts/k8s/03-retry.yml
@@ -18,27 +18,23 @@ spec:
               number: 3000
     - match:
         - uri:
-            prefix: /posts
+            exact: /posts
       route:
         - destination:
             host: posts-service
             port:
               number: 3000
+      timeout: 3s
+      retries:
+        attempts: 3
+        perTryTimeout: 2s
+        retryOn: 5xx
     - match:
         - uri:
-            prefix: /comments
-      fault:
-        delay:
-          fixedDelay: 5s
-          percentage:
-            value: 33
-        abort:
-          httpStatus: 500
-          percentage:
-            value: 33
+            exact: /users
       route:
         - destination:
-            host: comments-service
+            host: users-service
             port:
               number: 3000
     - match:
