--- a/scripts/k8s/02-hpa.yml
+++ b/scripts/k8s/02-hpa.yml
@@ -1,4 +1,4 @@
-apiVersion: autoscaling/v1
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: posts-hpa
@@ -9,7 +9,10 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: posts-deployment
-  targetCPUUtilizationPercentage: 30
-status:
-  currentReplicas: 1
-  desiredReplicas: 0
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 20
